# concrete

./: .clang-format  .clang-tidy  .copier-answers.yml  .editorconfig  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.rst  root.html  sources.cmake  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cpp-ci.yml  gh-pages.yml
docs/: CMakeLists.txt  conf.py  index.rst
docs/modules/: concepts.rst  data_defined_status_domain.rst  intrusive_ptr.rst  math_supplement.rst  misc.rst  overloaded.rst  scope_guard.rst  tag_invoke.rst
docs/modules/type_utils/: index.rst
docs/modules/utils/: index.rst  math_supplement.rst  misc.rst  scope_guard.rst
include/dplx/: overloaded.hpp  scope_guard.hpp  span.hpp
include/dplx/cncr/: bit.hpp  misc.hpp  pack_utils.hpp
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
master/.doctrees/: environment.pickle  index.doctree
master/.doctrees/modules/: bit.doctree  concepts.doctree  data_defined_status_domain.doctree  intrusive_ptr.doctree  math_supplement.doctree  misc.doctree  overloaded.doctree  pack_utils.doctree  scope_guard.doctree  tag_invoke.doctree
master/.doctrees/modules/type_utils/: index.doctree  tag_invoke.doctree
master/.doctrees/modules/utils/: index.doctree  math_supplement.doctree  misc.doctree  scope_guard.doctree
master/_sources/: index.rst.txt
master/_sources/modules/: bit.rst.txt  data_defined_status_domain.rst.txt  misc.rst.txt  pack_utils.rst.txt  scope_guard.rst.txt
master/_sources/modules/utils/: index.rst.txt
master/_static/: documentation_options.js
master/modules/: bit.html  concepts.html  data_defined_status_domain.html  intrusive_ptr.html  math_supplement.html  misc.html  overloaded.html  pack_utils.html  scope_guard.html  tag_invoke.html
master/modules/type_utils/: index.html  tag_invoke.html
master/modules/utils/: index.html  math_supplement.html  misc.html  scope_guard.html
src/cncr_tests/: range_generator.hpp  test_utils.hpp
src/dplx/: cncr.hpp  cncr.natvis  cncr.test.cpp  make.hpp  make.test.cpp  overloaded.hpp  overloaded.test.cpp  scope_guard.hpp  scope_guard.test.cpp
src/dplx/cncr/: bit.hpp  bit.test.cpp  buffer.hpp  buffer.test.cpp  concepts.hpp  concepts.test.cpp  config.hpp  config.test.cpp  data_defined_status_domain.hpp  data_defined_status_domain.test.cpp  disappointment.hpp  disappointment.test.cpp  intrusive_ptr.hpp  intrusive_ptr.test.cpp  math_supplement.hpp  math_supplement.test.cpp  misc.hpp  misc.test.cpp  mp_lite.hpp  mp_lite.test.cpp  pack_utils.hpp  pack_utils.test.cpp  ranges.hpp  ranges.test.cpp  tag_invoke.hpp  tag_invoke.test.cpp  type_utils.hpp  type_utils.test.cpp  utils.hpp  utils.test.cpp  uuid.fmt.hpp  uuid.hpp  uuid.rng.hpp  uuid.test.cpp  windows-proper.h  windows-proper.test.cpp  workaround.h  workaround.test.cpp
src/dplx/cncr/detail/: workaround.hpp  workaround.test.cpp
src/dplx/predef/: workaround.h  workaround.test.cpp
tests/: boost-test.hpp  concrete-tests.main.cpp  misc.test.cpp  pack_utils.test.cpp
tools/: concrete-config.cmake  concrete-config.cmake.in  config.hpp.in
tools/toolchains/: clang-15-brew-x64-macos.cmake
tools/triplets/: x64-osx-clang-15-brew.cmake  x64-osx-gcc-12.cmake  x64-windows-ltcg-static.cmake
